chronobreak_derive/tests/ui/fails/apply/multiple_closure_args.stderr
error: apply! expected a closure with exactly one argument here:
 --> $DIR/multiple_closure_args.rs:7:16
  |
7 |     apply!(0, |_, _| 0, |_| 0);
  |                ^^^^
